djangobb_forum/static/djangobb_forum/js/markitup/sets/bbcode/style.css
/* -------------------------------------------------------------------
// markItUp!
// By Jay Salvat - http://markitup.jaysalvat.com/
// ------------------------------------------------------------------*/
.markItUp .markItUpButton1 a	{
	background-image:url(images/bold.png);
}
.markItUp .markItUpButton2 a	{
	background-image:url(images/italic.png);
}
.markItUp .markItUpButton3 a	{
	background-image:url(images/underline.png);
}

.markItUp .markItUpButton4 a	{
	background-image:url(images/stroke.png);
}

.markItUp .markItUpButton5 a	{
	background-image:url(images/picture.png);
}
.markItUp .markItUpButton6 a	{
	background-image:url(images/link.png);
}

.markItUp .markItUpButton7 a	{
	background-image:url(images/fonts.png);
}
.markItUp .markItUpButton8 a	{
	background-image:url(images/list-bullet.png);
}
.markItUp .markItUpButton9 a	{
	background-image:url(images/list-numeric.png);
}
.markItUp .markItUpButton10 a	{
	background-image:url(images/list-item.png);
}

.markItUp .markItUpButton11 a	{
	background-image:url(images/quotes.png);
}
.markItUp .markItUpButton12 a	{
	background-image:url(../../../../img/smilies/smile.png);
}
.markItUp .markItUpButton12-1 a	{
	background-image:url(../../../../img/smilies/smile.png);
}
.markItUp .markItUpButton12-2 a	{
	background-image:url(../../../../img/smilies/neutral.png);
}
.markItUp .markItUpButton12-3 a	{
	background-image:url(../../../../img/smilies/sad.png);
}
.markItUp .markItUpButton12-4 a	{
	background-image:url(../../../../img/smilies/big_smile.png);
}
.markItUp .markItUpButton12-5 a	{
	background-image:url(../../../../img/smilies/yikes.png);
}
.markItUp .markItUpButton12-6 a	{
	background-image:url(../../../../img/smilies/wink.png);
}
.markItUp .markItUpButton12-7 a	{
	background-image:url(../../../../img/smilies/hmm.png);
}
.markItUp .markItUpButton12-8 a	{
	background-image:url(../../../../img/smilies/tongue.png);
}
.markItUp .markItUpButton12-9 a	{
	background-image:url(../../../../img/smilies/lol.png);
}
.markItUp .markItUpButton12-10 a	{
	background-image:url(../../../../img/smilies/mad.png);
}
.markItUp .markItUpButton12-11 a	{
	background-image:url(../../../../img/smilies/roll.png);
}
.markItUp .markItUpButton12-12 a	{
	background-image:url(../../../../img/smilies/cool.png);
}
.markItUp .browser-os-button a	{
	background-image:url(../../../../img/browser-os.png);
}
.markItUp .clean a {
	background-image:url(images/clean.png);
}
.markItUp .preview a {
	background-image:url(images/preview.png);
}

